# advent-of-code-2022-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
aoc_06-common/src/: aoc.cpp  aoc.hpp
aoc_06a/: CMakeLists.txt
aoc_06a-modules/: CMakeLists.txt
aoc_06a-modules/src/: aoc.ixx  main.cpp
aoc_06a/src/: aoc.cpp  aoc.hpp  main.cpp
aoc_06a/test/: test.cpp
aoc_06b/: CMakeLists.txt
aoc_06b/src/: aoc.cpp  main.cpp
aoc_06b/test/: test.cpp
aoc_12a/: CMakeLists.txt
aoc_12a/src/: aoc.cpp  main.cpp
aoc_12a/test/: test.cpp
